Added discounts for dishes
